# GameAI

./: .bazelrc  README.md
ais/: BUILD  connect4AI.cpp  connect4AI.h  connect4Client.cpp  connect4Test.cpp  fourInARow.cpp  fourInARow.h  fourInARowAI.cpp  fourInARowAI.h  fourInARowClient.cpp
brokers/: BUILD.bazel  connect4.py  connect4TestClient.py  fourInARow.py  fourInARowTestClient.py
proto/: BUILD.bazel  game.proto
