package(default_visibility = ["//visibility:public"])

py_binary(
    name = "fourInARow",
    srcs = ["fourInARow.py"],
    deps = [
        "//proto:game_py_grpc",
        "//proto:game_py_proto",
    ]
)

py_binary(
    name = "fourInARowTestClient",
    srcs = ["fourInARowTestClient.py"],
    deps = [
        "//proto:game_py_grpc",
        "//proto:game_py_proto",
    ]
)

