package(default_visibility = ["//visibility:public"])

py_binary(
    name = "connect4",
    srcs = ["connect4.py"],
    deps = [
        "//proto:game_py_grpc",
        "//proto:game_py_proto",
    ]
)

py_binary(
    name = "connect4TestClient",
    srcs = ["connect4TestClient.py"],
    deps = [
        "//proto:game_py_grpc",
        "//proto:game_py_proto",
    ]
)

